--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <scriput src="https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js"></scriput>
+    <script src="https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js"></script>
 </body>
 </html>
