--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js"></script>
+    <script>
+        alert(1)
+    </script>
 </body>
 </html>
