--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <script>
-        alert(1)
+        windlow.onload = function(){
+            alert(1);
+            let scriptDom = document.createElement("script");
+            scriptDom = "https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js";
+            document.body.appendChild(scriptDom)
+        }
     </script>
 </body>
 </html>
