--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
         alert(1);
         let scriptDom = document.createElement("script");
-        scriptDom = "https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js";
+        scriptDom.src = "https://raw.githubusercontent.com/13032519955/verificationCssAndJs1/master/script.js";
         document.body.appendChild(scriptDom)
        
     </script>
